# WSLX

./: .clang-format  CMakeLists.txt  README.md  WSL_ANALYSIS_REPORT.md  cgmanifest.json  claude.md  nuget.config
.github/policies/: resourceManagement.yml
.github/workflows/: issue_edited.yml
Research/: CONCURRENT_VM_PROOF.md  EVIDENCE_PACK.md  SXS_DEEP_DIVE.md  SXS_MVP_PLAN.md  UNC_RUNTIME_PROOF.md  WSL_ANALYSIS_REPORT.md
distributions/: requirements.txt  validate-modern.py
doc/: Parallel Dev Guide.md
doc/research/: Gemini + Portal.md  Hyper-V Virtualization Primitives for WSLX.md  Hyperlight-OpenVMM-OpenHCL - Custom WSL Stack Feasibility.md  WHP vs HCS - VMBus - Inter-VM Shared Memory.md  seminal - NXIA R3.md
msipackage/: CMakeLists.txt  package.wix.in
msixgluepackage/: AppxManifest.in  CMakeLists.txt
msixinstaller/: CMakeLists.txt
src/windows/service/: CMakeLists.txt
src/windows/service/exe/: CMakeLists.txt  IMirroredNetworkManager.h  LxssHttpProxy.h  LxssUserSession.h  MirroredNetworking.h  ServiceMain.cpp  WslCoreAdviseHandler.h  WslCoreGuestNetworkService.cpp  WslCoreGuestNetworkService.h  WslCoreNetworkEndpoint.h  WslCoreTcpIpStateTracking.cpp  WslCoreTcpIpStateTracking.h
src/windows/service/inc/: wslservice.idl
src/windows/wsl/: CMakeLists.txt
storebroker/: sbconfig.json
test/: README.md
test/windows/: CMakeLists.txt  Common.cpp  Common.h  DrvFsTests.cpp  MountTests.cpp  NetworkTests.cpp  Plan9Tests.cpp  SimpleTests.cpp  (+2 more)
tools/: FormatSource.ps1.in  generateLocalizationHeader.ps1
triage/: config.yml  install-latest-wsl.ps1
(+211 files in other folders)
